# ml-project

./: .gitignore  README.md  pyproject.toml
src/ml_project/: data.py  data_split.py  pipeline.py  train.py
