[tool.poetry]
name = "9"
version = "0.1.0"
description = ""
authors = ["nowayqq <set.mr@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "^1.4.2"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
mlflow = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "ml_project.train:train"